--- a/SCFrontEnd/package.json
+++ b/SCFrontEnd/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.14.12",
     "@tanstack/react-query-devtools": "^4.29.19",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.1",
     "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.0",
     "styled-components": "^6.0.3"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "sass": "^1.69.2",
     "vite": "^4.4.0"
   }
 }
